<resources>
    <string name="app_name">CalculateWorkingTime</string>

    <string name="notification_channel_id">ndADnasdnjaASD</string>
    <string name="notification_title">Таймер запущен</string>
    <string name="stop_timer">Остановить таймер</string>
    <string name="channel_name">Work Timer</string>
    <string name="channel_description">Display working timer</string>
    <string name="def_timer_value">00:00:00</string>
    <string name="today_date">сегодняшняя дата:</string>
    <string name="project">Проект:</string>
    <string name="disclaimer">таймер будет продолжать отсчет, даже если вы закроете приложение</string>
    <string name="project_hint">Введите название проекта</string>
    <string name="error_empty_name">Имя не может быть пустым</string>
    <string name="space">\ </string>
    <string name="line_break">\n</string>
    <string name="count_work_house_in_day">Количество рабочих часов\nв сутки</string>
    <string name="it_day_off">это выходной</string>
    <string name="label_one_day">один день</string>
    <string name="label_settings">настройки</string>
    <string name="label_timer">таймер</string>
    <string name="label_projects">проекты</string>
    <string name="label_statistic">статистика</string>
    <string name="cancel">отмена</string>
    <string name="ok">подтвердить</string>
    <string name="delete_project_or_not">Удалить проект? Статистика с ним сохранится, но выбрать его больше будет нелья</string>
    <string name="hint_input_time">50</string>
    <string name="input_new_time">Введите новое время, мин:</string>
    <string name="error_select_project">Необходимо выбрать проект</string>
    <string name="error_wrong_new_time">Данное число не может быть временем</string>
    <string name="accept">принять</string>
</resources>