<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="@dimen/def_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_new_time"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_new_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:backgroundTint="@color/def_text_color"
        android:hint="@string/hint_input_time"
        android:inputType="number"
        android:maxLength="4"
        android:textColorHint="@color/hint_text_color"
        android:textColor="@color/def_text_color"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/b_accept"
        style="@style/CustomDialogButton"
        android:text="@string/accept" />

    <TextView
        android:id="@+id/b_cancel"
        style="@style/CustomDialogButton"
        android:text="@string/cancel" />


</LinearLayout>