<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainFragment">
    <fragment
        android:id="@+id/mainFragment"
        android:name="com.dolgopolov.calculateworkingtime.view.fragments.MainFragment"
        tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_mainFragment_to_settingFragment"
            app:destination="@id/settingFragment"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_oneDayFragment"
            app:destination="@id/oneDayFragment"
            app:popUpTo="@id/mainFragment">

        </action>
        <action
            android:id="@+id/action_mainFragment_to_statisticsFragment"
            app:destination="@id/statisticsFragment"
            app:popUpTo="@id/mainFragment" />
        <action
            android:id="@+id/action_mainFragment_to_timerFragment"
            app:destination="@id/timerFragment"
            app:popUpTo="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/oneDayFragment"
        android:name="com.dolgopolov.calculateworkingtime.view.fragments.OneDayFragment"
        android:label="@string/label_one_day"
        tools:layout="@layout/fragment_one_day">
        <argument
            android:name="dayInfo"
            app:argType="com.dolgopolov.calculateworkingtime.models.DayInformation" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.dolgopolov.calculateworkingtime.view.fragments.SettingFragment"
        android:label="@string/label_settings"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_settingFragment_to_projectsFragment"
            app:destination="@id/projectsFragment" />
    </fragment>
    <fragment
        android:id="@+id/timerFragment"
        android:name="com.dolgopolov.calculateworkingtime.view.fragments.TimerFragment"
        android:label="@string/label_timer"
        tools:layout="@layout/fragment_timer">
        <action
            android:id="@+id/action_timerFragment_to_projectsFragment"
            app:destination="@id/projectsFragment"
            app:popUpTo="@id/timerFragment" />
    </fragment>
    <fragment
        android:id="@+id/projectsFragment"
        android:name="com.dolgopolov.calculateworkingtime.view.fragments.ProjectsFragment"
        android:label="@string/label_projects"
        tools:layout="@layout/fragment_projects" />
    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.dolgopolov.calculateworkingtime.view.fragments.StatisticsFragment"
        android:label="@string/label_statistic"
        tools:layout="@layout/fragment_statistics">
        <action
            android:id="@+id/action_statisticsFragment_to_projectsFragment"
            app:destination="@id/projectsFragment" />
    </fragment>
</navigation>